--- a/src/App.css
+++ b/src/App.css
@@ -79,7 +79,8 @@ code {
 }
 
 .container button {
-  padding: 0.6rem 1.2rem;
+  padding: 0.6rem 1rem;
+  font-size: 15px;
   color: white;
   background-color: var(--primary-color);
   border-radius: 0.3rem;
