--- a/src/App.css
+++ b/src/App.css
@@ -70,7 +70,10 @@ code {
   padding-inline-start: 0rem;
 }
 .container ul li {
-  padding: 1.5rem;
+  display: flex;
+  justify-content: start;
+  align-items: flex-start;
+  padding: 0.2rem 0.2rem;
   width: 100%;
   border: 1px solid #d1d5db;
   margin: 1rem 0rem;
@@ -92,4 +95,19 @@ code {
 
 .container button:hover {
   background-color: var(--secondary-color);
+}
+
+.container .img-container {
+  width: 40%;
+  height: 160px;
+  overflow: hidden;
+}
+
+.container .img-container img {
+  width: 100%;
+  height: 100%;
+}
+
+.book-content {
+  padding: 1.5rem 2rem;
 }
