--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,7 @@ code {
   background-color: #fde047;
   padding: 0.2rem 0.6rem;
   border-radius: 0.3rem;
+  font-size: 0.9rem;
 }
 
 @media only screen and (max-width: 520px) {
