--- a/src/App.css
+++ b/src/App.css
@@ -112,6 +112,28 @@ code {
   font-size: 0.9rem;
 }
 
+.footer {
+  width: 90%;
+  margin-top: 0rem;
+  text-align: center;
+}
+
+.footer ul {
+  padding-inline-start: 0px;
+}
+
+.footer a {
+  color: dodgerblue;
+}
+
+.footer .list-non-bullet {
+  list-style: none;
+}
+.footer .list-item-inline {
+  display: inline;
+  padding: 0rem 0.8rem;
+}
+
 @media only screen and (max-width: 520px) {
   .hero {
     padding-top: 2rem;
