--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,7 @@ code {
 .footer .list-item-inline {
   display: inline;
   padding: 0rem 0.8rem;
+  border: none;
 }
 
 @media only screen and (max-width: 520px) {
